--- a/IsmtMultimediaMobile/MainPage.xaml
+++ b/IsmtMultimediaMobile/MainPage.xaml
@@ -5,6 +5,6 @@
              x:Class="IsmtMultimediaMobile.MainPage">
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
+        <Label Text="ISMT Multimedia Mobile" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
     </StackLayout>
 </ContentPage>
